Modifies the slideshow wrapper z-index to ensure that the slideshow will not overlap other important header items at large screen sizes.

--- a/css/slideshow-1000+.css
+++ b/css/slideshow-1000+.css
@@ -3,6 +3,10 @@
 /* 1,000+ pixels */
 
 
+#gmuj-slideshow-wrapper {
+	z-index: 0;
+}
+
 .gmuj-slide {
 	background-size: cover;
 }
